scrollbars fixed

--- a/frontend/src/components/Presupuestador/presupuestador.css
+++ b/frontend/src/components/Presupuestador/presupuestador.css
@@ -8,7 +8,7 @@
     border: 1px solid #ddd;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-size: x-small;
-    overflow: scroll;
+    overflow-y: scroll;
     display: block;
 }
 .logo-container {
