--- a/frontend/src/components/Presupuestos/presupuestos.css
+++ b/frontend/src/components/Presupuestos/presupuestos.css
@@ -14,7 +14,7 @@
     width: 70%;
     min-width: 50vw;
     max-width: 80%;
-    max-height: 70vh;
+    /* max-height: 70vh; */
     margin: 60px auto !important;
     font-size: 12px;
     border-collapse: collapse;
@@ -38,7 +38,6 @@
 
 .presupuestos-table-head {
     background-color: #f4f4f4;
-
 }
 
 .presupuestos-table tr:nth-child(even) {
@@ -199,7 +198,7 @@ li {
 
   .vsc-loading {
     animation: spin 2s linear infinite;
-    font-size: 50px; 
+    font-size: 50px;
   }
 
 
